Improve move algorithm